# cosbot

./: .env  pyproject.toml
alembic/: env.py
cosbot/: config.py  main.py
cosbot/models/: base.py  economy.py
